objects/Benfit_Request_Form__c.object
<CustomObject>
    <fields>
        <fullName>Related_Benefit_Request_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Benefit Request Form</label>
        <referenceTo>Benfit_Request_Form__c</referenceTo>
        <relationshipLabel>Benefit Request Forms</relationshipLabel>
        <relationshipName>Benefit_Request_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Next Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Cede_Document__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Cede Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect/New</fullName>
                </value>
                <value>
                    <fullName>RFP</fullName>
                </value>
                <value>
                    <fullName>Renew As-is</fullName>
                </value>
                <value>
                    <fullName>Off-Cycle - Administrative Change</fullName>
                </value>
                <value>
                    <fullName>Off-Cycle - Benefit Change</fullName>
                </value>
                <value>
                    <fullName>Off-Cycle - Administrative and Benefit Change</fullName>
                </value>
                <value>
                    <fullName>Renewal - Administrative Changes</fullName>
                </value>
                <value>
                    <fullName>Renewal - Benefit Changes</fullName>
                </value>
                <value>
                    <fullName>Renewal - Admin and Benefit Changes</fullName>
                </value>
                <value>
                    <fullName>Set-up Change - Administrative Changes</fullName>
                </value>
                <value>
                    <fullName>Set-up Change - Benefit Changes</fullName>
                </value>
                <value>
                    <fullName>Set-up Change - Admin and Benefit Changes</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revision_Number__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Revision Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rider_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rider Comments</label>
        <length>54</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rider__c</fullName>
        <label>Rider</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Jurisdiction__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Infertility Services Coverage Rider</fullName>
                </value>
                <value>
                    <fullName>Family Planning Benefits Exclusion Rider</fullName>
                </value>
                <value>
                    <fullName>Hearing Aid Rider</fullName>
                </value>
                <value>
                    <fullName>Morbid Obesity Surgery Benefit Amendment</fullName>
                </value>
                <value>
                    <fullName>Acupuncture Rider</fullName>
                </value>
                <value>
                    <fullName>Alzheimer's Disease Benefits Rider</fullName>
                </value>
                <value>
                    <fullName>Care of Elderly Individuals Benefits Rider</fullName>
                </value>
                <value>
                    <fullName>Gonorrhea Screening Rider</fullName>
                </value>
                <value>
                    <fullName>Repatriation of Remains Rider</fullName>
                </value>
                <value>
                    <fullName>Travels Expense for Serious Illness or Injury Rider</fullName>
                </value>
                <value>
                    <fullName>Group Incentive Program Rider</fullName>
                </value>
                <value>
                    <fullName>Vision Care Rider</fullName>
                </value>
                <value>
                    <fullName>Prescription Drug Benefits Rider</fullName>
                </value>
                <value>
                    <fullName>Domestic Partner Rider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk__c</fullName>
        <formula>IF(ISPICKVAL(Funding_Arrangements__c ,'Risk'),True,False)</formula>
        <label>Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rx_Integration_PP__c</fullName>
        <label>Rx Integration PP</label>
        <summaryFilterItems>
            <field>Proposed_Products__c.Is_RX_Integration_ARC_Approval_Required__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Proposed_Products__c.Benefit_Request_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rx_Network__c</fullName>
        <label>Rx Network</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>RX Choice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Consultant_Account_Manager__c</fullName>
        <formula>Account_Executive_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Executive</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Management_Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Management Approval</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Benefit_Request_Forms9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales Rep Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sales_Segment_Size__c</fullName>
        <label>Sales Segment Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial 200-999</fullName>
                </value>
                <value>
                    <fullName>Commercial 1,000+</fullName>
                </value>
                <value>
                    <fullName>Labor</fullName>
                </value>
                <value>
                    <fullName>Municipal</fullName>
                </value>
                <value>
                    <fullName>New Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales__c</fullName>
        <label>Sales Management Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_1st_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send 1st Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_to_Actuarial_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send to Actuarial Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Senior_Management_Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Senior Management Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Benefit_Request_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Senior_Management_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Senior Management Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source_Benefit_Request_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Benefit Request Form</label>
        <referenceTo>Benfit_Request_Form__c</referenceTo>
        <relationshipLabel>Benefit Request Forms (Source Benefit Request Form)</relationshipLabel>
        <relationshipName>Benefit_Request_Forms1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Specific_Stop_Loss_Options__c</fullName>
        <label>Specific Stop Loss Options</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Jurisdiction__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>$20,000</fullName>
                </value>
                <value>
                    <fullName>$22,500</fullName>
                </value>
                <value>
                    <fullName>$25,000</fullName>
                </value>
                <value>
                    <fullName>$30,000</fullName>
                </value>
                <value>
                    <fullName>$40,000</fullName>
                </value>
                <value>
                    <fullName>$45,000</fullName>
                </value>
                <value>
                    <fullName>$50,000</fullName>
                </value>
                <value>
                    <fullName>$55,000</fullName>
                </value>
                <value>
                    <fullName>$60,000</fullName>
                </value>
                <value>
                    <fullName>$65,000</fullName>
                </value>
                <value>
                    <fullName>$70,000</fullName>
                </value>
                <value>
                    <fullName>$75,000</fullName>
                </value>
                <value>
                    <fullName>$80,000</fullName>
                </value>
                <value>
                    <fullName>$85,000</fullName>
                </value>
                <value>
                    <fullName>$90,000</fullName>
                </value>
                <value>
                    <fullName>$95,000</fullName>
                </value>
                <value>
                    <fullName>$100,000</fullName>
                </value>
                <value>
                    <fullName>$105,000</fullName>
                </value>
                <value>
                    <fullName>$110,000</fullName>
                </value>
                <value>
                    <fullName>$115,000</fullName>
                </value>
                <value>
                    <fullName>$120,000</fullName>
                </value>
                <value>
                    <fullName>$125,000</fullName>
                </value>
                <value>
                    <fullName>$130,000</fullName>
                </value>
                <value>
                    <fullName>$135,000</fullName>
                </value>
                <value>
                    <fullName>$140,000</fullName>
                </value>
                <value>
                    <fullName>$145,000</fullName>
                </value>
                <value>
                    <fullName>$150,000</fullName>
                </value>
                <value>
                    <fullName>$155,000</fullName>
                </value>
                <value>
                    <fullName>$160,000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Standard_Network__c</fullName>
        <label>Standard Network</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No - Requires Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State1__c</fullName>
        <formula>Opportunity__r.Account.ShippingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Opportunity__r.Account.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Benefit Request Form Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Sold</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Revised Approved</fullName>
                </value>
                <value>
                    <fullName>Sold-Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stop_Loss_Contract_Period__c</fullName>
        <label>Stop Loss Contract Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incurred in 12 Paid in 12</fullName>
                </value>
                <value>
                    <fullName>Incurred in 12 Paid in 15</fullName>
                </value>
                <value>
                    <fullName>Incurred in 12 Paid in 18</fullName>
                </value>
                <value>
                    <fullName>Incurred in 12 Paid in 24</fullName>
                </value>
                <value>
                    <fullName>Incurred in 15 Paid in 12</fullName>
                </value>
                <value>
                    <fullName>Incurred in 18 Paid in 12</fullName>
                </value>
                <value>
                    <fullName>Incurred in 24 Paid in 12</fullName>
                </value>
                <value>
                    <fullName>Paid in 12</fullName>
                </value>
                <value>
                    <fullName>Interpolating</fullName>
                </value>
                <value>
                    <fullName>Extrapolating</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stop_Loss_Notification_Email_1__c</fullName>
        <defaultValue>$Setup.AIA_Workflow_Emails__c.Stop_Loss_Notification_Email_1__c</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Stop Loss Notification : Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Stop_Loss_Notification_Email_2__c</fullName>
        <defaultValue>$Setup.AIA_Workflow_Emails__c.Stop_Loss_Notification_Email_2__c</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Stop Loss Notification : Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Stop_Loss__c</fullName>
        <label>Stop Loss</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CareFirst</fullName>
                </value>
                <value>
                    <fullName>Preferred - HM</fullName>
                </value>
                <value>
                    <fullName>Preferred - Symetra</fullName>
                </value>
                <value>
                    <fullName>Non-Preferred</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Group_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>story 3416 - aia</description>
        <label>Sub Group Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>This window shows only Sub Group accounts related to the Account selected in the Account field</errorMessage>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>Account.ParentId</valueField>
            </filterItems>
            <infoMessage>Select Sub Group Account of BRF's Account</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Benefit Request Forms (Sub Group Account)</relationshipLabel>
        <relationshipName>Benefit_Request_FormsSubGroupAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submit_Medical_Plan_s_for_MHP_Testing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For Risk business, I acknowledge that I will submit the sold medical benefits to the Actuarial team for Mental Health Parity testing.</inlineHelpText>
        <label>Medical Plan(s) will be MHP Tested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submit_to_ARC_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit to ARC Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submit_to_Underwriting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted to Underwriting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tiers__c</fullName>
        <inlineHelpText>If a grandfathered account selects 5-tier RX, then the account may lose its grandfathered status.</inlineHelpText>
        <label>Tiers</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Underwriter_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Underwriter User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Benefit_Request_Forms18</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Underwriting_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments for Underwriting</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Valid_Cede_Document_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Cede Document Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verification_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Verification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Verified_By__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Verified By</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Who_Marks_Sold__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Who_Marks_Sold</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Benefit_Request_Forms1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zip_Code_Validation__c</fullName>
        <label>Zip Code Validation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Within the CareFirst service area</fullName>
                </value>
                <value>
                    <fullName>Outside CareFirst Service Area - Denied</fullName>
                </value>
                <value>
                    <fullName>Outside CareFirst Service Area - Request Cede</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <formula>Opportunity__r.Account.ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>being_cloned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>being cloned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>count_of_vision_with_platform_indicator__c</fullName>
        <label>count of vision with platform indicator</label>
        <summaryFilterItems>
            <field>Proposed_Products__c.Addition_to_Platform_Indicator__c</field>
            <operation>notEqual</operation>
            <value>NASCO, Both</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Proposed_Products__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Vision</value>
        </summaryFilterItems>
        <summaryForeignKey>Proposed_Products__c.Benefit_Request_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>zzzMHP_Required__c</fullName>
        <formula>IF (OR(ISPICKVAL(Request_Type__c , "Renewal - Administrative Changes"), ISPICKVAL(Request_Type__c , "Set-up Change - Administrative Changes"), ISPICKVAL(Request_Type__c , "Off-Cycle - Administrative Change")) , 'No', 
IF (ISPICKVAL(Request_Type__c , "Renewal - Benefit Changes") , 'Yes', 
IF (ISPICKVAL(Request_Type__c , "Renewal - Admin and Benefit Changes") , 'Yes', 
IF (Count_of_Proposed_Products__c = 0 , '' , 
IF (Count_of_Medical_Proposed_Products__c &gt;= 1 , 'Yes' , 
IF (Count_of_Medical_Proposed_Products__c = 0 , 'No' , NULL))))))</formula>
        <label>zzzMHP Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zzzMHP_Test_Result__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>zzzMHP Test Result</label>
        <type>TextArea</type>
    </fields>
    <description>New object for AIA - This object stores the information that is needed for a quote</description>
    <label>Benefit Request Form</label>
    <nameField>
        <displayFormat>BRF-{000000}</displayFormat>
        <label>Benefit Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Benefit Request Forms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>ARC_Approvals_Missing_AA</fullName>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>NAME</columns>
        <columns>Benefit_Effective_Date__c</columns>
        <columns>Funding_Arrangements__c</columns>
        <columns>Status__c</columns>
        <columns>zzzMHP_Required__c</columns>
        <columns>MHP_Test_Result__c</columns>
        <columns>ARC_Approval_Required__c</columns>
        <columns>ARC_Approval_Status__c</columns>
        <columns>Submit_to_Underwriting__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ancillary_Analyst__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Sold,Inactive</value>
        </filters>
        <label>ARC Approvals Missing Ancillary Analyst</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Funding_Arrangements__c</columns>
        <columns>ARC_Approval_Status__c</columns>
        <columns>Jurisdiction__c</columns>
        <columns>Count_of_Proposed_Products__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Count_of_Medical_Proposed_Products__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>Count_of_Proposed_Products__c</field>
            <operation>greaterThan</operation>
            <value>5</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>In_ARC_Approvals</fullName>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>NAME</columns>
        <columns>Benefit_Effective_Date__c</columns>
        <columns>Funding_Arrangements__c</columns>
        <columns>Status__c</columns>
        <columns>zzzMHP_Required__c</columns>
        <columns>MHP_Test_Result__c</columns>
        <columns>ARC_Approval_Required__c</columns>
        <columns>ARC_Approval_Status__c</columns>
        <columns>Submit_to_Underwriting__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ARC_Approval_Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>In ARC Approvals</label>
    </listViews>
    <listViews>
        <fullName>Underwriting</fullName>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>NAME</columns>
        <columns>Benefit_Effective_Date__c</columns>
        <columns>Funding_Arrangements__c</columns>
        <columns>Status__c</columns>
        <columns>zzzMHP_Required__c</columns>
        <columns>MHP_Test_Result__c</columns>
        <columns>ARC_Approval_Required__c</columns>
        <columns>ARC_Approval_Status__c</columns>
        <columns>Submit_to_Underwriting__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Submit_to_Underwriting__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>Underwriting</label>
    </listViews>
    <recordTypes>
        <fullName>ASO</fullName>
        <active>true</active>
        <description>ASO Layout</description>
        <label>ASO</label>
    </recordTypes>
    <recordTypes>
        <fullName>Both</fullName>
        <active>true</active>
        <description>Both Layout</description>
        <label>Both</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <description>Other Layout</description>
        <label>Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>Risk</fullName>
        <active>true</active>
        <description>Risk Layout</description>
        <label>Risk</label>
    </recordTypes>
    <validationRules>
        <fullName>EBRF001</fullName>
        <active>true</active>
        <description>For "Other" Enrollment Option user should manually enter Other Enrollment Options</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; NOT(ISCLONE()) &amp;&amp; NOT(CreatedDate &lt;= $Setup.BDApprovalValidation__c.Created_date__c) &amp;&amp; IF(TEXT(Enrollment_Option__c) = 'Other' &amp;&amp; ISBLANK( Other_Enrollment_Option__c), True, False 
) 
/*IF(NOT( ISNEW() &amp;&amp; NOT(ISBLANK( Source_Benefit_Request_Form__c))),IF(AND(TEXT(Enrollment_Option__c) = 'Other', 
ISBLANK( Other_Enrollment_Option__c) )&amp;&amp; if(ISBLANK( Source_Benefit_Request_Form__c),true,if(Clone_count__c &gt; 1,true,false)) 
&amp;&amp; NOT($Permission.Ignore_Validation_Rules) &amp;&amp; 
( ISBLANK(CreatedDate) || CreatedDate &gt; $Setup.BDApprovalValidation__c.Created_date__c),TRUE,FALSE),FALSE)*/</errorConditionFormula>
        <errorDisplayField>Other_Enrollment_Option__c</errorDisplayField>
        <errorMessage>EBRF001: If Enrollment Option = 'Other' then Other Enrollment Option field cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBRF002</fullName>
        <active>false</active>
        <description>For "Other" Funding Arragnements user should manually enter Other Funding Arrangements</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; (IF( 
AND( 
TEXT(  Funding_Arrangements__c ) = "Other", 
ISBLANK( Other_Funding_Arrangements__c  )), True, False 
))&amp;&amp; (NOT(ISCLONE()))</errorConditionFormula>
        <errorDisplayField>Other_Funding_Arrangements__c</errorDisplayField>
        <errorMessage>EBRF002 : If Funding Arrangements = "Other" then Other Funding Arrangements field cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBRF003</fullName>
        <active>true</active>
        <description>EBRF003 : If Contact Period = "Non-standard" then number of months for contract period  cannot be blank and the value should be less than 36 months</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp;  NOT(ISCLONE()) &amp;&amp; NOT(CreatedDate &lt;= $Setup.BDApprovalValidation__c.Created_date__c) &amp;&amp; (IF( TEXT( Contract_Period__c ) ='Non-Standard' &amp;&amp;  ISBLANK(Number_of_Months_for_Contract_Period__c),true,IF(TEXT( Contract_Period__c ) ='Non-Standard' &amp;&amp; Number_of_Months_for_Contract_Period__c &gt; 36,true,false )))
/*IF(NOT( ISNEW() &amp;&amp; NOT(ISBLANK( Source_Benefit_Request_Form__c))),IF(OR(TEXT( Contract_Period__c ) ='Non-Standard' &amp;&amp; 
ISBLANK(Number_of_Months_for_Contract_Period__c),
IF(TEXT( Contract_Period__c ) ='Non-Standard' &amp;&amp; Number_of_Months_for_Contract_Period__c &gt; 36,true,false ))&amp;&amp; 
if(ISBLANK( Source_Benefit_Request_Form__c),true,if(Clone_count__c &gt; 1,true,false)) 
&amp;&amp; NOT($Permission.Ignore_Validation_Rules) &amp;&amp;
( ISBLANK(CreatedDate) || CreatedDate &gt; $Setup.BDApprovalValidation__c.Created_date__c),TRUE,FALSE),FALSE)*/</errorConditionFormula>
        <errorDisplayField>Number_of_Months_for_Contract_Period__c</errorDisplayField>
        <errorMessage>EBRF003 : If Contact Period = 'Non-standard' then number of months for contract period  cannot be blank and the value should be less than 36 months</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBRF004</fullName>
        <active>true</active>
        <description>EBRF004 : If Enrollment Option is "eExchange" then enrollment vendor field cannot be blank</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; NOT(ISCLONE()) 
&amp;&amp; NOT(CreatedDate &lt;= $Setup.BDApprovalValidation__c.Created_date__c) &amp;&amp; NOT( $Permission.AIA_Ignore_BRF_Validation_Rules ) &amp;&amp; 
((AND(ISPICKVAL( Enrollment_Option__c , "eExchange") &amp;&amp; 
ISBLANK( Enrollment_Vendor__c ))))</errorConditionFormula>
        <errorDisplayField>Enrollment_Vendor__c</errorDisplayField>
        <errorMessage>EBRF004 : For Enrollment Option is 'eExchange' then enrollment vendor field cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBRF005</fullName>
        <active>false</active>
        <description>If MHP Required is true and MHP Test Result is Fail or Pending and Submit to Underwriting = true, then prevent saving record</description>
        <errorConditionFormula>AND(zzzMHP_Required__c == 'Yes' , (MHP_Test_Result__c == 'Fail' || MHP_Test_Result__c == 'Pending'),Submit_to_Underwriting__c == True == True)&amp;&amp; (NOT(ISCLONE()))</errorConditionFormula>
        <errorMessage>EBRF005: If MHP Required is true and MHP Test Result is 'Fail' or 'Pending' then cannot Submit to Underwriting.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBRF006</fullName>
        <active>true</active>
        <description>EBRF006: Cannot Submit to Underwriting if in BRF:
1. For ASO/Other BRF, either Off cycle - Administrative and Benefit or Benefit Changes, if Stoploss is not CareFirst (or)
2. Offcycle changes - Administrative Changes</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; 

OR ((AND( OR(ISPICKVAL(Funding_Arrangements__c, 'ASO'), ISPICKVAL(Funding_Arrangements__c, 'Other')), NOT(ISPICKVAL(Stop_Loss__c, 'CareFirst')), Submit_to_Underwriting__c == True, OR(ISPICKVAL(Request_Type__c, 'Off-Cycle - Benefit Change'), ISPICKVAL(Request_Type__c, 'Off-Cycle - Administrative and Benefit Change')) )) ,

(AND(ISPICKVAL(Request_Type__c, 'Off-Cycle - Administrative Change'), Submit_to_Underwriting__c == True)))&amp;&amp; (NOT(ISCLONE()))</errorConditionFormula>
        <errorMessage>EBRF006: Cannot Submit to Underwriting if in BRF:
1. For ASO/Other BRF, either Off cycle - Administrative and Benefit or Benefit Changes, if Stoploss is not CareFirst (or)
2. Offcycle changes - Administrative Changes</errorMessage>
    </validationRules>
</CustomObject>